[package]
name = "bran"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
env_logger = "0.10.0"
log = "0.4.20"


serde = "1.0.189"
serde_json = "1.0.107"

tokio = { version = "1.33.0", features = ["full"] }
tower = "0.4.13"
tower-http = { version = "0.5.0", features = ["fs"] }
axum = { version = "0.7.2", features = ["tracing", "json"] }
mime_guess = "2.0.4"

starduck = "0.1"
